finish grpc structure
